@@ -1,6 +1,8 @@
 package com.academiverse.academiverse_api.service;
 
+import com.academiverse.academiverse_api.dto.request.EnrolmentSaveRequest;
 import com.academiverse.academiverse_api.dto.response.BaseResponse;
+import com.academiverse.academiverse_api.dto.response.EnrolEligibleResponse;
 import com.academiverse.academiverse_api.model.Enrolment;
 import com.academiverse.academiverse_api.model.Instruct;
 import com.academiverse.academiverse_api.model.User;
@@ -10,6 +12,7 @@ import com.academiverse.academiverse_api.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -21,30 +24,46 @@ public class EnrolmentService {
     private final InstructRepository instructRepository;
     private final UserRepository userRepository;
 
-    public BaseResponse<List<Long>> getEligibleStudents(Long instructId) {
+    public BaseResponse<List<EnrolEligibleResponse>> getEligibleStudents(Long instructId) {
         Optional<Instruct> instruct = instructRepository.findById(instructId);
-        BaseResponse<List<Long>> response = new BaseResponse<>();
+        BaseResponse<List<EnrolEligibleResponse>> response = new BaseResponse<>();
+
 
         if (instruct.isPresent()) {
-            // Retrieve the department ID from the course
             Long departmentId = instruct.get().getCourse().getDepartment().getDepartmentId();
 
             // Get all users
-            List<User> allUsers = userRepository.findAll(); // Fetch all users
+            List<User> allUsers = userRepository.findByRole("student"); // Fetch all users
 
             // Get a list of enrolled students
-            List<Long> enrolledStudents = enrolmentRepository.findByInstructId(instructId)
+            List<Long> enrolledStudents = enrolmentRepository.findByInstructInstructId(instruct.get().getInstructId())
                     .stream()
-                    .map(Enrolment::getUserId)
-                    .collect(Collectors.toList());
+                    .map(enrolment -> {
+                        return enrolment.getUser().getUserId();
+                    })
+                    .toList();
 
             // Filter eligible students based on department and enrollment status
-            List<Long> eligibleStudents = allUsers.stream()
-                    .filter(user -> user.getDepartment().equals(departmentId) && !enrolledStudents.contains(user.getUserId()))
-                    .map(User::getUserId)
-                    .collect(Collectors.toList());
+            List<EnrolEligibleResponse> eligibleResponses = allUsers.stream()
+                    .filter(user -> user.getDepartment().getDepartmentId().equals(departmentId))
+                    .map(user -> {
+                        EnrolEligibleResponse enrolEligibleResponse = new EnrolEligibleResponse();
 
-            response.data = eligibleStudents;
+                        if (enrolledStudents.contains(user.getUserId())) {
+                            enrolEligibleResponse.user = user;
+                            enrolEligibleResponse.isEnrolled = true;
+                        }
+
+                        if (user.getDepartment().getDepartmentId().equals(departmentId)) {
+                            enrolEligibleResponse.user = user;
+                            enrolEligibleResponse.isEnrolled = false;
+                        }
+
+                        return enrolEligibleResponse;
+                    })
+                    .toList();
+
+            response.data = eligibleResponses;
             response.isError = false;
             response.message = "Eligible students retrieved successfully.";
         } else {
@@ -55,19 +74,23 @@ public class EnrolmentService {
         return response;
     }
 
-    public BaseResponse<String> enrollStudent(Long userId, Long instructId) {
-        BaseResponse<String> response = new BaseResponse<>();
-        Optional<Instruct> instruct = instructRepository.findById(instructId);
-        Optional<User> user = userRepository.findById(userId);
+    public BaseResponse<Enrolment> enrollStudent(EnrolmentSaveRequest enrolmentSaveRequest) {
+        BaseResponse<Enrolment> response = new BaseResponse<>();
+        Optional<Instruct> instruct = instructRepository.findById(enrolmentSaveRequest.instructId);
+        Optional<User> user = userRepository.findById(enrolmentSaveRequest.userId);
 
         if (instruct.isPresent() && user.isPresent()) {
             Enrolment enrolment = new Enrolment();
-            enrolment.setUserId(userId);
-            enrolment.setInstructId(instructId);
-            enrolment.setActive(true); // Assuming isActive is true by default
-            enrolmentRepository.save(enrolment);
+            enrolment.setUser(user.get());
+            enrolment.setInstruct(instruct.get());
+            enrolment.setActive(enrolmentSaveRequest.isActive);
+            enrolment.setCreatedBy(enrolmentSaveRequest.createdBy);
+            enrolment.setUpdatedBy(enrolmentSaveRequest.createdBy);
+            enrolment.setUpdatedAt(LocalDateTime.now());
+            enrolment.setCreatedAt(LocalDateTime.now());
+            enrolment = enrolmentRepository.save(enrolment);
 
-            response.data = "Student enrolled successfully.";
+            response.data = enrolment;
             response.isError = false;
             response.message = "Enrollment successful.";
         } else {
